--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "parmigene"]
+	path = parmigene
+	url = https://github.com/sales-lab/parmigene
+	shallow = true
+	registered = true
