--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,13 @@
 	url = https://github.com/sales-lab/parmigene
 	shallow = true
 	registered = true
+[submodule "graphite"]
+	path = graphite
+	url = https://github.com/sales-lab/graphite
+	shallow = true
+	registered = true
+[submodule "spatialDE"]
+	path = spatialDE
+	url = https://github.com/sales-lab/spatialde
+	shallow = true
+	registered = true
