--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,8 @@
 	url = https://github.com/sales-lab/graphite
 	shallow = true
 	registered = true
+[submodule "spatialDE"]
+	path = spatialDE
+	url = https://github.com/sales-lab/spatialde
+	shallow = true
+	registered = true
